; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_find_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_find_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.strbuf*, i8*, i8*, i32, i32)* @find_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_name(%struct.strbuf* %0, i8* %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca %struct.strbuf*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %7, align 8
  store i8* %1, i8** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 34
  br i1 %16, label %17, label %27

17:                                               ; preds = %5
  %18 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i8* @find_name_gnu(%struct.strbuf* %18, i8* %19, i32 %20)
  store i8* %21, i8** %12, align 8
  %22 = load i8*, i8** %12, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i8*, i8** %12, align 8
  store i8* %25, i8** %6, align 8
  br label %34

26:                                               ; preds = %17
  br label %27

27:                                               ; preds = %26, %5
  %28 = load %struct.strbuf*, %struct.strbuf** %7, align 8
  %29 = load i8*, i8** %8, align 8
  %30 = load i8*, i8** %9, align 8
  %31 = load i32, i32* %10, align 4
  %32 = load i32, i32* %11, align 4
  %33 = call i8* @find_name_common(%struct.strbuf* %28, i8* %29, i8* %30, i32 %31, i32* null, i32 %32)
  store i8* %33, i8** %6, align 8
  br label %34

34:                                               ; preds = %27, %24
  %35 = load i8*, i8** %6, align 8
  ret i8* %35
}

declare dso_local i8* @find_name_gnu(%struct.strbuf*, i8*, i32) #1

declare dso_local i8* @find_name_common(%struct.strbuf*, i8*, i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
